      descriptions for consistency with the policy.

  * collection/*:
    + [NT] Removed assumption that "cwd" is the same as the
      directory for the package being examined.
  * collection/java-info:
    + [NT] Added missing "use Util".
  * collection/scripts:
    + [NT] Use "fail" from Util.pm rather than using an embedded
      copy.

  * frontend/lintian:
    + [NT] Pass directory of the package to the collections.

  * lib/Lintian/Tag/Info.pm:
    + [NT] Fixed issue where "Experimental: no" was handled as a
      "yes" when generating a tag description.

 -- Niels Thykier <niels@thykier.net>  Fri, 24 Feb 2012 09:40:30 +0100

lintian (2.5.5) unstable; urgency=low

  The "Policy 3.9.3" release.

  * Summary of tag changes:
    + Added:
      - arch-dependent-file-not-in-arch-specific-directory
      - control-file-contains-dh_make-vcs-comment
      - debhelper-compat-file-is-missing
      - dependency-is-not-multi-archified
      - dh-exec-install-not-allowed-here
      - dh-exec-private-helper
      - dh-exec-script-without-dh-exec-features
      - dh-exec-subst-unknown-variable
      - executable-debhelper-file-without-being-executable
      - missing-dependency-on-numpy-abi
      - package-file-is-executable
      - package-uses-dh-exec-but-lacks-build-depends
      - preinst-uses-dpkg-maintscript-helper-without-predepends
      - shlib-in-multi-arch-foreign-package
      - source-contains-waf-binary
      - syntax-error-in-control-file
      - syntax-error-in-debconf-template
    + Removed:
      - dh_dhelp-is-deprecated
      - maintainer-not-full-name
      - maintainer-script-calls-deprecated-wm-menu-config
      - maintainer-script-does-not-check-for-existence-of-wm-menu-config
      - uploader-address-missing
      - uploader-not-full-name

  * checks/*:
    + [NT] Fixed assumptions about certain fields being present.
      Where needed, Lintian will make guesses to the most likely
      value (or the least "broken" value).